--- a/src/face_recog_demo.ui
+++ b/src/face_recog_demo.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>QtGLWebcamDemo</class>
- <widget class="QMainWindow" name="QtGLWebcamDemo">
+ <class>face_recog_demo</class>
+ <widget class="QMainWindow" name="face_recog_demo">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>QtGLWebcamDemo</string>
+   <string>Face Recog</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
