--- a/src/face_recog_demo.ui
+++ b/src/face_recog_demo.ui
@@ -16,7 +16,7 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QViewerGl" name="openCVviewer" native="true"/>
+     <widget class="webcam_widget" name="openCVviewer" native="true"/>
     </item>
     <item>
      <widget class="QWebEngineView" name="webView"/>
@@ -58,9 +58,9 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>QViewerGl</class>
+   <class>webcam_widget</class>
    <extends>QWidget</extends>
-   <header>qviewergl.h</header>
+   <header>webcam_widget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
